<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/park_two_radius_two_angle"
        tools:context=".fragment.drivearea.ParkSearchFragment">


        <TextView
            android:id="@+id/park_in_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/park_string_search_car"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/park_in_defult_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/park_string_search_car_info"
            android:textColor="#99FFFFFF"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/park_in_search_text" />

        <ImageView
            android:id="@+id/park_in_left_line"
            android:layout_width="10dp"
            android:layout_height="200dp"
            android:contentDescription="@string/park_img_content"
            android:src="@drawable/park_vertical_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <ImageView
            android:id="@+id/park_in_right_line"
            android:layout_width="10dp"
            android:layout_height="200dp"
            android:contentDescription="@string/park_img_content"
            android:src="@drawable/park_vertical_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <ImageView
            android:id="@+id/park_in_pink_car"
            android:layout_width="40dp"
            android:layout_height="120dp"
            android:contentDescription="@string/park_img_content"
            android:src="@drawable/parked_icon_search_car"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/park_in_right_line"
            app:layout_constraintStart_toEndOf="@+id/park_in_left_line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.289" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/park_img_content"
            android:src="@drawable/park_img_park_car"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/park_in_right_line" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>