<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_function"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_black"
        tools:context=".fragment.drivearea.DriveAreaFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/drive_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin_left"
                android:layout_marginTop="@dimen/title_margin_top"
                android:layout_marginEnd="@dimen/title_margin_right"
                android:layout_marginBottom="@dimen/title_margin_bottom"
                android:text="@string/fun_drive"
                android:textColor="@color/white"
                android:textSize="@dimen/fg_title_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/drive_line"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/underline_margin_left"
                android:layout_marginTop="@dimen/underline_margin_top"
                android:layout_marginEnd="@dimen/underline_margin_right"
                android:layout_marginBottom="@dimen/underline_margin_bottom"
                android:background="@drawable/park_line_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/drive_text"
                app:layout_constraintStart_toStartOf="@+id/drive_text"
                app:layout_constraintTop_toBottomOf="@+id/drive_text" />

            <TextView
                android:id="@+id/park_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/park_string_park_in_model"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/drive_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/parked_line"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/park_line_style"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/park_in_text"
                app:layout_constraintStart_toStartOf="@+id/park_in_text"
                app:layout_constraintTop_toBottomOf="@+id/park_in_text" />

            <TextView
                android:id="@+id/park_out_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin_left"
                android:layout_marginTop="@dimen/title_margin_top"
                android:text="@string/park_string_park_out_info"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/park_in_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/park_out_line"
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/underline_margin_top"
                android:layout_marginBottom="@dimen/underline_margin_bottom"
                android:background="@drawable/park_line_style"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/park_out_text"
                app:layout_constraintStart_toStartOf="@+id/park_out_text"
                app:layout_constraintTop_toBottomOf="@+id/park_out_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/fun_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table_layout"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

